styles/index.css
:root {
    --regular-line-color: rgb(100, 100, 100);
    --strong-line-color: rgb(177, 177, 177);
    --display-background-color: #66cc00;
    --cell-height: 10px;
    --control-cell-height: 20px;
    --control-container-height: 42px;
    --timeline-background: rgb(82, 82, 82);
    --timeline-height: 20px;
}

html,
body {
    background: rgb(69, 69, 70);
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    user-select: none;
}

.ghost {

    opacity: 0.7;
    position: absolute;

}

.patternControls {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    color: white;
    text-align: center;
    background: rgb(69, 69, 70);
    height: 80px;
    width: 980px;
    margin: auto;
    padding: 0px;
    display: flex;
    justify-content: space-around;
}

.patternControlsContainer {
    background: rgb(69, 69, 70);
    border-bottom: 1px solid black;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 999999;
}

.mode {
    background-color: rgb(88, 88, 88);
}

.mixerContainer {
    display: flex;
    overflow-x: scroll;
    background: rgb(87, 87, 87);
    border: 1px solid black;
    
    width: 100%;
    height: 100%;
    
}

.mixerChannelMaster,
.mixerChannelMulti {
    width: 130px;
    border-right: 1px solid rgb(204, 203, 203);
    padding: 5px;
}

.mixerChannelMulti {
    background: rgb(112, 112, 112);
}
.mixerChannelMaster svg {
    justify-self: center;
}

.mixerChannelName {
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
    color: white;
    margin: 10px;
    border-bottom: 1px solid rgb(204, 203, 203);

}

.soloButton,
.soloButtonActive,
.muteButton,
.muteButtonActive,
.deleteButton {
    background-repeat: no-repeat;
    background-size: contain;
    height: 14px;
    width: 14px;
    margin: 1px;
    
}

.soloButton {
    background-image: url("../img/instrumentslot/solo.png");
}

.soloButtonActive {
    background-image: url("../img/instrumentslot/soloactive.png");
}

.soloButton:hover {
    background-image: url("../img/instrumentslot/solomouseover.png");
}

.muteButton {
    background-image: url("../img/instrumentslot/soundoff.png");
}

.muteButtonActive {
    background-image: url("../img/instrumentslot/soundon.png");
}

.muteButtonActive:hover {
    background-image: url("../img/instrumentslot/soundonmouseover.png");
}

.muteButton:hover {
    background-image: url("../img/instrumentslot/soundoffmouseover.png");
}

.deleteButton {
    background-image: url("../img/instrumentslot/delete.png");
}

.deleteButton:hover {
    background-image: url("../img/instrumentslot/deletemouseover.png");
    
}

 
.controlsContainerGrid,
.controlsInnerContainerBars,
.controlsInnerContainerBpm {
    width: 100px;
}

.controlsContainerInstrumentTrack,
.controlsContainerPattern {

width: 140px;

}
.dropdownMenu {

min-height: 20px;
width: 140px;
position: relative;
display: inline-block;

}

.dropdownMenu:hover .dropDownList {

display: block;

}

.addNewInstrumentButton,
.addNewPatternButton {

    height: 25px;
    width: 140px;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    margin-top: 5px;
}

.addNewInstrumentButton {

    background-image: url("../img/controls/newinstrument.png");
}

.addNewInstrumentButton:hover {

    background-image: url("../img/controls/newinstrumenthover.png");
}

.addNewPatternButton {

    background-image: url("../img/controls/newpattern.png");
}

.addNewPatternButton:hover {

    background-image: url("../img/controls/newpatternhover.png");
}

.dropdownCurrent {

    position: absolute;   
    top: 4px;
    background: var(--display-background-color);
    border-radius: 3px;
    box-shadow: inset 0 0 5px #000000;
    height: 20px;
    align-items: center;
    justify-content: start;
    display: flex;
    width: 140px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    color: white;

}

.dropdownCurrentText {

    width: 113px;
    height: 14px;
    margin-left: 5px;
    text-align: left;
    overflow: hidden;
}

.dropDownList {

    
    position: absolute;
    width: 133px;
    top: 24px;
    left: 3px;
    font-family: Arial, Helvetica, sans-serif;
    background-color: rgb(28, 87, 41);
    display: none;
    font-size: 10px;
    color: white;   
    z-index: 1;
    align-items: flex-start;
    border-bottom: 1px solid rgb(48, 47, 47);
    border-left: 1px solid rgb(48, 47, 47);
    border-right: 1px solid rgb(48, 47, 47);
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;

}

.addNewTrack {

    width: 100;
    height: 14px;
    text-align: center;
    border-top: 1px solid rgb(48, 47, 47);
    display: block;
    background-color: rgb(48, 133, 66);
}
.addNewTrack:hover {

    background-color: rgb(43, 156, 68);

}

.dropdownListItem {
    width: 133px;
    height: 14px;
    text-align: left;
    border-top: 1px solid rgb(48, 47, 47);
    display: flex;
    align-items: center;

}

.dropdownListItem:hover {

    background-color: rgb(22, 189, 58);

}



.dropdownDeleteIcon,
.dropdownEditIcon {
    background-repeat: no-repeat;
    background-size: contain;
    height: 12px;
    width: 12px;
    margin: 1px;
    
}

.dropdownEditIcon {

    background-image: url("../img/controls/editicon.png");
}

.dropdownEditIcon:hover {
    background-color: rgb(48, 133, 66);
    
}

.dropdownDeleteIcon {
    background-image: url("../img/instrumentslot/delete.png");
}

.dropdownDeleteIcon:hover {
    background-color: red;
    
}

.dropdownListText {

    width: 107px;
    height: 12px;
    padding-left: 3px;
    overflow: hidden;

}

.dropdownListEdit {

    width: 24px;
    height: 15px;
    display: flex;

}

.controlsInnerContainerTransport {
    width: 200px;
    align-self: center;
}
/* ... */

